Update home template

--- a/cats/templates/cats/home.html
+++ b/cats/templates/cats/home.html
@@ -1,6 +1,6 @@
 {% extends "cats/base.html" %} {% block content %}
 <p align="center">
-    <iframe height=480 width=80% src="https://www.google.com/maps/embed/v1/view?key=AIzaSyApNqXZH0K65zLFfu98xUwph3VvkBEvDA4
+    <iframe height=480 width=80% src="https://www.google.com/maps/embed/v1/view?key=API_KEY
     &center=37.78197479248047,-122.4074478149414
     &zoom=15" allowfullscreen>
 </iframe>
