--- a/cats/static/cats/main.css
+++ b/cats/static/cats/main.css
@@ -1,7 +1,3 @@
-iframe {
-    margin: 0 auto;
-}
-
 body {
     background: #fafafa;
     color: #333333;
@@ -16,6 +12,13 @@ h5,
 h6 {
     color: #444444;
 }
+
+
+/*
+.container {
+    text-align: center;
+}
+*/
 
 ul {
     margin: 0;
@@ -90,4 +93,13 @@ a.article-title:hover {
 
 .account-heading {
     font-size: 2.5rem;
+}
+
+.image {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 10%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
