--- a/cats/templates/cats/home.html
+++ b/cats/templates/cats/home.html
@@ -1,8 +1,8 @@
 {% extends "cats/base.html" %} {% block content %}
 <p align="center">
-    <iframe height=480 width=80% src="https://www.google.com/maps/embed/v1/view?key=GOOGLE_MAPS_API_KEY
+    <iframe height=480 width=80% src="https://www.google.com/maps/embed/v1/view?key=AIzaSyCJilKY-oThuuPahQ1UIM3aSp6dYiFZOZ4
     &center=37.781975,-122.407448
-    &zoom=18" allowfullscreen>
+    &zoom=15" allowfullscreen>
     </iframe>
 </p>
 
