--- a/cats/templates/cats/base.html
+++ b/cats/templates/cats/base.html
@@ -26,6 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{% url 'cats-home' %}">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'cats-all' %}">All Cats</a>
                         <a class="nav-item nav-link" href="{% url 'cats-about' %}">About</a>
                     </div>
                 </div>
