--- a/cats/templates/cats/base.html
+++ b/cats/templates/cats/base.html
@@ -6,9 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="shortcut icon" href="https://i.imgur.com/UfCM5Zx.png">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'cats/main.css' %}"> {% if title %}
+    <link rel="stylesheet" type="text/css" href="{% static 'cats/main.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Eczar&display=swap" rel="stylesheet"> {% if title %}
     <title>Companion Cats - {{ title }}</title>
     {% else %}
     <title>Companion Cats</title>
@@ -20,6 +23,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
                 <a class="navbar-brand mr-4" href="{% url 'cats-home' %}">Companion Cats</a>
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
