Add logo to site header

--- a/cats/templates/cats/base.html
+++ b/cats/templates/cats/base.html
@@ -22,7 +22,8 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="{% url 'cats-home' %}">Companion Cats</a>
+                <!--<a class="navbar-brand mr-4" href="{% url 'cats-home' %}"><img src="https://i.imgur.com/2lzMS2d.png" width=30 height=30>&nbsp;&nbsp;&nbsp;Companion Cats</a>-->
+                <a class="navbar-brand mr-4" href="{% url 'cats-home' %}"><img src="https://i.imgur.com/2lzMS2d.png" width=30 height=30>&nbsp;&nbsp;&nbsp;Companion Cats</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
