--- a/cats/templates/cats/find.html
+++ b/cats/templates/cats/find.html
@@ -42,6 +42,7 @@
                         <b>Distance:</b> {{ cat.distance|floatformat }} miles<br>
                         <b>Available:</b> {{ cat.available }}
                     </h4>
+                    <center><a href="{% url 'cats-cat' cat_id=cat.id %}"><button class="borrow" type="button">Borrow {{ cat.name }}</button></a></center>
                 </div>
             </article>
             {% endif %} {% endif %} {% endfor %}
