Improve style on landing page

--- a/cats/templates/cats/home.html
+++ b/cats/templates/cats/home.html
@@ -1,7 +1,7 @@
 {% extends "cats/base.html" %} {% block content %}
 <center>
     <header>
-        <img src="https://i.imgur.com/MxKTn3Q.png" alt="Companion Cats" class="header-img" width=873 height=488>
+        <img src="https://i.imgur.com/9hHiH87.png" alt="Companion Cats" class="logo-img" width=565 height=391>
     </header>
 
     <article class="media content-section">
@@ -15,8 +15,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Find a Cat</h2>
-                            <p>Find just the cat you're looking for! Cats can be filtered by age and breed.</p>
+                            <h1>Find a Cat</h1>
+                            <h4>Find just the cat you're looking for! Cats can be filtered by age and breed.</h4>
                         </div>
                     </div>
                 </div>
@@ -35,8 +35,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">All Cats</h2>
-                            <p>Browse our entire collection of cats available. 1300+ cats located all over the San Francisco Bay Area!</p>
+                            <h1>All Cats</h1>
+                            <h4>Browse our entire collection of cats available. 1300+ cats located all over the San Francisco Bay Area!</h4>
                         </div>
                     </div>
                 </div>
@@ -55,8 +55,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Borrow a Cat</h2>
-                            <p>Once you've found the perfect cat for you, get directions and go pick it up!</p>
+                            <h1>Borrow a Cat</h1>
+                            <h4>Once you've found the perfect cat for you, get directions and go pick it up!</h4>
                         </div>
                     </div>
                 </div>
