--- a/cats/static/cats/main.css
+++ b/cats/static/cats/main.css
@@ -109,6 +109,15 @@ a.article-title:hover {
     margin-right: auto;
 }
 
+.logo-img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .borrow {
     background-color: #ff7e73;
     border: none;
