--- a/cats/templates/cats/home.html
+++ b/cats/templates/cats/home.html
@@ -10,7 +10,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 order-lg-2">
                         <div class="p-5">
-                            <img src="https://i.imgur.com/THEbmrI.png" alt="Find a Cat" class="header-img" width=576 height=360>
+                            <img src="https://i.imgur.com/GoAuqa7.png" alt="Find a Cat" class="header-img" width=576 height=360>
                         </div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
@@ -30,7 +30,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <img src="https://i.imgur.com/3fQlDIv.png" alt="All Cats" class="header-img" width=576 height=360>
+                            <img src="https://i.imgur.com/lVJtjMx.png" alt="All Cats" class="header-img" width=576 height=360>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -50,7 +50,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 order-lg-2">
                         <div class="p-5">
-                            <img src="https://i.imgur.com/ONnbbSJ.png" alt="Borrow a Cat" class="header-img" width=576 height=360>
+                            <img src="https://i.imgur.com/SWwg0o9.png" alt="Borrow a Cat" class="header-img" width=576 height=360>
                         </div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
