--- a/cats/templates/cats/about.html
+++ b/cats/templates/cats/about.html
@@ -1,3 +1,19 @@
 {% extends "cats/base.html" %} {% block content %}
-<h1>About Page</h1>
+<center>
+    <img class="about-img" src="https://pbs.twimg.com/profile_images/1217302708241043456/UiYa7HKs_400x400.jpg" alt="Brent" width=200 height=200>
+    <br><br><br>
+    <div class="about">
+        <p>
+            My name is Brent Muha and I created Companion Cats. I'm a former elementary school teacher transitioning into software engineering. I love problem solving and collaborating with others. This site is my capstone project at Holberton School, and I am pursuing
+            opportunities as a full stack web developer with a focus on back end.
+        </p>
+    </div>
+    <a href="https://github.com/bmuha1" target="_blank">
+        <img src="https://i.imgur.com/fblt1fs.png" alt="Github" width=50 height=50>
+    </a>
+    &emsp;&emsp;&emsp;
+    <a href="https://www.linkedin.com/in/brentmuha/" target="_blank">
+        <img src="https://i.imgur.com/coMRUPJ.png" alt="LinkedIn" width=50 height=50>
+    </a>
+</center>
 {% endblock content %}
