--- a/cats/templates/cats/about.html
+++ b/cats/templates/cats/about.html
@@ -10,8 +10,7 @@
     </div>
     <a href="https://github.com/bmuha1" target="_blank">
         <img src="https://i.imgur.com/fblt1fs.png" alt="Github" width=50 height=50>
-    </a>
-    &emsp;&emsp;&emsp;
+    </a>&emsp;&emsp;&emsp;
     <a href="https://www.linkedin.com/in/brentmuha/" target="_blank">
         <img src="https://i.imgur.com/coMRUPJ.png" alt="LinkedIn" width=50 height=50>
     </a>
