Fix Chrome bug with extra pixels on hover over image link

--- a/cats/static/cats/main.css
+++ b/cats/static/cats/main.css
@@ -137,6 +137,10 @@ a.article-title:hover {
     text-align: justify;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 .about-img {
     border-radius: 50%;
 }
