--- a/cats/templates/cats/about.html
+++ b/cats/templates/cats/about.html
@@ -8,11 +8,14 @@
             opportunities as a full stack web developer with a focus on back end.
         </p>
     </div>
-    <a href="https://github.com/bmuha1" target="_blank">
-        <img src="https://i.imgur.com/fblt1fs.png" alt="Github" width=50 height=50>
-    </a>&emsp;&emsp;&emsp;
-    <a href="https://www.linkedin.com/in/brentmuha/" target="_blank">
-        <img src="https://i.imgur.com/coMRUPJ.png" alt="LinkedIn" width=50 height=50>
-    </a>
+    <div class="about_logos">
+        <a href="https://github.com/bmuha1" target="_blank">
+            <img src="https://i.imgur.com/fblt1fs.png" alt="Github" width=50 height=50>
+        </a>
+        &emsp;&emsp;&emsp;
+        <a href="https://www.linkedin.com/in/brentmuha/" target="_blank">
+            <img src="https://i.imgur.com/coMRUPJ.png" alt="LinkedIn" width=50 height=50>
+        </a>
+    </div>
 </center>
 {% endblock content %}
